fixed #10 - color contrast failing for "the color should be between (...)"
RGAA 3.3.1  AA

--- a/contrast-finder-webapp/src/main/webapp/Css/color-finder.css
+++ b/contrast-finder-webapp/src/main/webapp/Css/color-finder.css
@@ -10,6 +10,8 @@ a {
 /* Bootstrap override */ 
 .help-block {
     font-size : 12px;
+    color: #5A5A5A; /* AA */
+    color: #5A5151; /* AAA */
 }
 .alert-warning {
     color: #6c4a1e; 
